refactor(file): AttachmentFileService 코드 정리 및 메서드 주석 추가
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>